--- a/03_Form/04_render_fields_through_loop/form/main/templates/main/index.html
+++ b/03_Form/04_render_fields_through_loop/form/main/templates/main/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Rendering form field manually</h1>
+    <h1>Rendering form field through loop</h1>
 
     {%for field in form%} 
     {{field.label_tag}}
