--- a/05_Blog/blog/main/templates/index.html
+++ b/05_Blog/blog/main/templates/index.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <H1>hELLO WORLD</H1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}
+index
+{% endblock title %}
+
+{% block body %}
+<h1>Hello world</h1>
+{% endblock body %}
