--- a/05_Blog/blog/main/templates/index.html
+++ b/05_Blog/blog/main/templates/index.html
@@ -4,7 +4,7 @@
 <ul>
   {% for post in object_list %}
   <li>
-    {{post.title}} -By: {{post.author.first_name}}
+    {{post.id}}) {{post.title}} -By: {{post.author.first_name}}
     <br />
     {{post.description}}
   </li>
