--- a/05_Blog/blog/main/templates/base.html
+++ b/05_Blog/blog/main/templates/base.html
@@ -19,28 +19,30 @@
     <title>{% block title %}{% endblock title %}</title>
   </head>
   <body>
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">My blog'</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">     
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-           
-          </ul>
-        
-        </div>
-      </nav>
+      <a class="navbar-brand" href=" {% url 'index' %} ">My blog'</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-
-      <div class="container mt-2">
-          {% block body %}{% endblock body %}
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+        </ul>
       </div>
+    </nav>
+
+    <div class="container mt-2">{% block body %}{% endblock body %}</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
