--- a/05_Blog/blog/main/templates/base.html
+++ b/05_Blog/blog/main/templates/base.html
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href=" {% url 'postCreate' %} ">Add post</a>
           </li>
         </ul>
       </div>
