--- a/05_Blog/blog/main/templates/createPost.html
+++ b/05_Blog/blog/main/templates/createPost.html
@@ -5,7 +5,7 @@
     {% csrf_token %}
     {{form.as_p}}
 
-    <input type="submit" value="Create">
+    <input type="submit" class="btn btn-secondary" value="Create">
 </form>
 
 <a href=" {% url 'index' %} "> Back</a>
