post update form made working

--- a/05_Blog/blog/main/templates/index.html
+++ b/05_Blog/blog/main/templates/index.html
@@ -9,6 +9,9 @@
     </a>
     <br />
     {{post.description}}
+    <br>
+    <small>( <a href=" {% url 'postUpdate' post.id %} ">Edit</a> )</small>
+    <small>( <a href="">Delete</a> )</small>
   </li>
   <br /><br />
   {% endfor %}
