post delete functionality implemented

--- a/05_Blog/blog/main/templates/index.html
+++ b/05_Blog/blog/main/templates/index.html
@@ -11,7 +11,7 @@
     {{post.description}}
     <br>
     <small>( <a href=" {% url 'postUpdate' post.id %} ">Edit</a> )</small>
-    <small>( <a href="">Delete</a> )</small>
+    <small>( <a href=" {% url 'postDelete' post.id %} ">Delete</a> )</small>
   </li>
   <br /><br />
   {% endfor %}
